# go-sandbox

./: .bashrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .precommit.sh  CHANGELOG.md  Dockerfile  README.environment.md  README.md  ROADMAP.md  devshell.toml  flake.nix  go.mod  main.go  nuke.sh
.github/workflows/: ci.yml
c-sandbox/: .bashrc  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  flake.nix  nuke.sh  precommit.sh  run.sh
c-sandbox/src/: main.c
cpp-sandbox/: .bashrc  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  flake.nix  precommit.sh  run.sh
cpp-sandbox/src/: main.cpp
csharp-sandbox/: .bashrc  .editorconfig  .gitignore  Dockerfile  Program.cs  README.md  csharp_sandbox.csproj  deps.json  flake.nix  nuke.sh
fundamentals/: fibonacci.go
go-sandbox/: .bashrc  .editorconfig  .gitignore  .golangci.yaml  README.md  flake.nix  go.mod  main.go  nuke.sh
haskell-sandbox/: .bashrc  CHANGELOG.md  README.md  flake.nix  haskell-construct.cabal
haskell-sandbox/app/: Main.hs
java-sandbox/: .bashrc  .gitignore  flake.nix
javascript-sandbox/: .bashrc  README.md  flake.nix  package.json
javascript-sandbox/src/: index.js
kotlin-sandbox/: .bashrc  README.md  flake.nix
lua-sandbox/: .bashrc  README.md  flake.nix
python-sandbox/: .bashrc  README.md  flake.nix  main.py
rust-sandbox/: .bashrc  .gitignore  README.md  flake.nix  nuke.sh
src/: main.go
swift-sandbox/: .bashrc  Package.swift  README.md  flake.nix
zig-sandbox/: .bashrc  flake.nix
(+9 files in other folders)
